Fixed invisible text

--- a/activities/Stopwatch.activity/css/activity.css
+++ b/activities/Stopwatch.activity/css/activity.css
@@ -25,6 +25,13 @@
   z-index: 5;
 }
 
+.palette {
+  color: inherit;
+}
+.palette label {
+  color: white;
+}
+
 ul {
   padding: 0;
   margin: 0;
